--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut minus, fugiat et laboriosam sint
                         ullam numquam fuga id eum fugit. Dolor assumenda quis omnis consectetur dolores natus, odit
                         consequatur aperiam.</p>
-                    <a href="" class="btun">My Works</a>
+                    <a href="#projects" class="btun">My Works</a>
                 </div>
                 <div class="imagedata">
                     <img src="./css/heroimge.jpg" alt="">
