--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut minus, fugiat et laboriosam sint
                     . Dolor assumenda quis omnis consectetur dolores 
                    </p>
-                <a href="" class="btun">My Works</a>
+                <a href="#projects" class="btun">My Works</a>
             </div>
         </div>
     </div>
